# Chordmata

./: CMakeLists.txt  Chordmata White Paper.md  README.md
lib/stk/4.6.1/: INSTALL_RECEIPT.json
lib/stk/4.6.1/share/stk/projects/demo/: Makefile  stk-demo
lib/stk/4.6.1/share/stk/projects/effects/: Makefile  effects
lib/stk/4.6.1/share/stk/projects/eguitar/: Makefile  eguitar
lib/stk/4.6.1/share/stk/projects/examples/: Makefile  audioprobe  bethree  controlbee  crtsine  duplex  foursine  grains  inetIn  inetOut  libMakefile  midiprobe  play  playsmf  record  rtsine  sine  sineosc  threebees
lib/stk/4.6.1/share/stk/projects/ragamatic/: Makefile  ragamat
lib/stk/4.6.1/share/stk/src/: Makefile
src/: CMakeLists.txt  Chordmata_en_US.ts  arrangement.cpp  arrangement.h  chord.cpp  chord.h  clip.cpp  clip.h  global.cpp  global.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  midiclip.cpp  midiclip.h  midievent.cpp  midievent.h  miditrack.cpp  miditrack.h  mixer.cpp  mixer.h  pianowork.cpp  pianowork.h  project.cpp  project.h  track.h
